Move patching steps to the dedicated script
to have it a bit easier when working locally

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,7 @@ patch:
   script:
     - git clone --depth=1 $ORIGIN
     - apt-get update && apt-get install -y rename
-    - cd inspec/bin
-    - rename 's/inspec/outspec/' *
-    - cd ../..
-    - sed -i '/spec.executables   =/ s/inspec/outspec/g' inspec/inspec.gemspec
-    - sed -i '/binaries=/ s/inspec/outspec/g' inspec/omnibus/package-scripts/inspec/postinst inspec/omnibus/package-scripts/inspec/postrm
-    - sed -i '/echo /s/InSpec/OutSpec/g' inspec/omnibus/package-scripts/inspec/postinst inspec/omnibus/package-scripts/inspec/postrm inspec/omnibus/package-scripts/inspec/preinst
+    - sh patch.sh
   artifacts:
     expire_in: 1d
     paths:
