--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ package:deb:
     - gem install omnibus
     - cd inspec/omnibus
     - bundle install --without development
-    - bundle exec omnibus build inspec
+    - bundle exec omnibus build outspec
     - ls -alh */*
     - mv pkg/*.deb $CI_PROJECT_DIR
   artifacts:
@@ -53,7 +53,7 @@ package:rpm:
     - gem install omnibus
     - cd inspec/omnibus
     - bundle install --without development
-    - bundle exec omnibus build inspec
+    - bundle exec omnibus build outspec
     - ls -alh */*
     - mv pkg/*.rpm $CI_PROJECT_DIR
   variables:
