We should use another runner for packagecloud
as it would likely have ruby and bundler

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -167,7 +167,7 @@ deploy to packagecloud:
   only:
     - master
   tags:
-    - osuosl
+    - downloads
   script:
     - bundle install
     - sh deploy.sh
