Fix paths because rsync is picky
This removes the dreaded sub directory being created that we don't want.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,5 +199,5 @@ publish:
     - downloads
   script:
     - sudo mkdir -p /data/mirror/files/${CHANNEL}/cinc-auditor
-    - sudo /usr/bin/rsync -avH /data/incoming/files/${CHANNEL}/cinc-auditor /data/mirror/files/${CHANNEL}/cinc-auditor
+    - sudo /usr/bin/rsync -avH /data/incoming/files/${CHANNEL}/cinc-auditor/ /data/mirror/files/${CHANNEL}/cinc-auditor/
     - ssh -q cinc@${MIRROR_HOST} "~/sync-from-master"
