Run version and detect commands as a part of testing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -118,6 +118,8 @@ package:centos-7:
   tags:
     - osuosl
   script:
+    - cinc-auditor version
+    - cinc-auditor detect
     - cinc-auditor exec test-baseline
 
 test:debian-8:
