--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,7 @@ patch:
     - osuosl
   script:
     - echo "Cloning from $ORIGIN"
-    - git clone --depth=1 -b $REF $ORIGIN
-    - cp -R cinc-auditor/* inspec/
+    - sh patch.sh
     - mkdir -p ${CI_PROJECT_DIR}/{cache,cache/git_cache}
     - echo "cache_dir '${CI_PROJECT_DIR}/cache'" >> inspec/omnibus/omnibus.rb
     - echo "git_cache_dir '${CI_PROJECT_DIR}/cache/git_cache'" >> inspec/omnibus/omnibus.rb
