--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -352,6 +352,24 @@ publish:
     - sudo /usr/bin/rsync -avH /data/incoming/files/${CHANNEL}/cinc-auditor/ /data/mirror/files/${CHANNEL}/cinc-auditor/
     - ssh -q cinc@${MIRROR_HOST} "~/sync-from-master"
 
+rubygems:
+  when: manual
+  stage: publish
+  tags:
+    - osuosl
+  dependencies:
+    - patch
+  script:
+    - mkdir -p $HOME/.gem
+    - touch $HOME/.gem/credentials
+    - chmod 0600 $HOME/.gem/credentials
+    - printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+    - source /home/omnibus/load-omnibus-toolchain.sh
+    - cd inspec
+    - gem build cinc-*.gemspec inspec-bin/cinc-*.gemspec
+    - gem push cinc-*.gem inspec-bin/cinc-*.gem
+    - rm -rf $HOME/.gem
+
 .cleanup:
   stage: cleanup
   dependencies: []
