Directly use rpm instead of zypper
This works around an issue with zypper refusing to install it because of the
lack of a gpg key.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -281,7 +281,7 @@ test:opensuse-15:
   dependencies:
     - package:opensuse-15
   before_script:
-    - zypper in -y data/sles/15/cinc-auditor*.rpm
+    - rpm -iU data/sles/15/cinc-auditor*.rpm
 
 test:macos-10.14:
   extends: .test
