Rename the jobs to something better
Also run bundle install inside of the script and ensure we load the omnibus
toolchain file.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -359,7 +359,7 @@ publish:
     - sudo /usr/bin/rsync -avH /data/incoming/files/${CHANNEL}/cinc-auditor/ /data/mirror/files/${CHANNEL}/cinc-auditor/
     - ssh -q cinc@${MIRROR_HOST} "~/sync-from-master"
 
-rubygems:
+publish-gems:
   when: manual
   stage: publish
   tags:
@@ -367,8 +367,7 @@ rubygems:
   dependencies:
     - patch
   script:
-    - bundle install
-    - ./rubygems.sh
+    - ./publish-gems.sh
 
 .cleanup:
   stage: cleanup
